--- a/style.css
+++ b/style.css
@@ -11,5 +11,22 @@
     background-color: var(--cor-de-fundo);
     color: var(--branco);
     font-family: 'Chakra Petch', sans-serif;
+}.titulo-principal {
+    text-align: left;
+    width: 100%;
+    font-size: 32px;
+}.titulo-principal {
+    text-align: left;
+    width: 100%;
+    font-size: 32px;
+}.titulo-principal {
+    text-align: left;
+    width: 100%;
+    font-size: 32px;
+}.titulo-principal span {
+    color: var(--verde);
+}.titulo-principal span {
+    color: var(--verde);
+}.titulo-principal span {
+    color: var(--verde);
 }
-
