--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     background-color: var(--cor-de-fundo);
     color: var(--branco);
     font-family: 'Chakra Petch', sans-serif;
-    
+
 }.titulo-principal {
     text-align: left;
     width: 100%;
@@ -46,4 +46,8 @@
     font-size: 18px;
     align-items: center;
     width: 100%;
+ border-bottom: 4px solid var(--botao-ativo); 
+    border-left: 2px solid var(--botao-ativo); 
+    border-right: 2px solid var(--botao-ativo); 
+    border-top: none;
 
